# appointment-scheduler-backend

./: .gitignore  DDL_Script_mock_data2.sql  Prompt_Functions_generator.md  README.md  Unit_tests_pytest.py  app.py  appointments.py  appointments_functions_test.py  appointments_test.py  data-modeling-learnings.md  data-tables.md  database-design.md  database-schema-tables.sql  db.py  main.py  mock-data-int.sql  models.py  pyproject.toml  requirements.txt  sample_data.md  seed_data.py  supabase-setup.md  test-api.http
