[project]
name = "appointment-scheduler-backend"
version = "0.1.0"
description = "The appointment-scheduler-backend is a backend layer for the Small businesss appointment scheduler full-stack application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "sqlalchemy>=2.0.40",
    "supabase>=2.15.0",
]
